--- a/mernapp/public/index.html
+++ b/mernapp/public/index.html
@@ -29,7 +29,7 @@
     <link
       href="https://db.onlinewebfonts.com/c/c891e94039740e4a24a9f53324fd91be?family=NHaasGroteskDSPro-65Md"
       rel="stylesheet" />
-    <title>React App</title>
+    <title>QuickEats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
